# symcirc

./: .gitignore  Application.py  Approximate.py  Circuit.py  Element.py  Equation_Formulator.py  Equation_Formulator_WIP.py  Main.py  Model.py  Modified_Node_Analysis.py  NetlistParser.py  Pspice_util.py  README.md  Sparse_Tableau.py  calc_tests.py  circuit.py  element.py  main.py  model.py  pyproject.toml  test.py  testNetlist.cir
gui/: Node.py  NodeEditor.py
gui/components/: BodePlot.py  NodeEditor.py  OutputPin.py  Table.py
gui/data/: NodeEditor.py
gui/nodes/: Approximator.py  ApproximatorNode.py  BodePlot.py  Flatten.py  ImportCircuit.py  ModifiedNodalAnalysis.py  NetlistParserNode.py  Node.py  NumericSolver.py  TransferFunctionNode.py
gui/themes/: WhiteExample.json  cropped.json  (+1 more)
netlist/: Circuit.py  Element.py  Model.py
parser/: CommonSimulationData.py  NetlistParser.py
pipelines/: basic_flatten.json  full_numeric.json  full_numeric_with_approx.json
test circuits/: Emitteramp_deutsch.cir  Emitteramp_deutsch.out  gm.out  testNetlist.cir
test_circuits/: Basisschaltung_2N2222.cir  Basisschaltung_2N2222.net  Basisschaltung_2N2222.out  Conrad2st.cir  Conrad2st.net  Conrad2st.out  Emitteramp_deutsch.cir  Emitteramp_deutsch.net  FB2COMP.cir  FB2COMP.csd  FB2COMP.out  MOS_Amp_Example5_d.cir  MOS_Amp_Example5_d.net  MOS_Amp_Example5_d.out  OPV11.cir  OPV11.net  OPV11.out  RASH_PCE3_MODEL.LIB  f2v.cir  gm.cir  gm2.cir  gm2.csd  gm2.out  labor10.cir  labor10.out  mos.lib  ntls.cir  ntls.out  simple_lc.cir  simple_lc.net  simple_lc.out  testNetlist.cir
(+42 files in other folders)
