[project]
name = "symcirc"
version = "0.1.0"
description = ""
authors = [
    {name = "Creapson",email = "creapson.creapson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui (>=2.1.1,<3.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "numexpr (>=2.14.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "symcirc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
